Add Tawk.to live chat script to index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,19 @@
     </footer>
   </div>
 
-  <!-- 🔴 LIVE CHAT SCRIPT WILL GO BELOW THIS LINE -->
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/698a030b2fb5be1c3a2b27ed/1jh1hnpmi';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->!-- 🔴 LIVE CHAT SCRIPT WILL GO BELOW THIS LINE -->
 
   <script>
     function openChat() {
