--- a/index.html
+++ b/index.html
@@ -3,104 +3,77 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Official Secure Support</title>
+  <title>Secure Support Services</title>
 
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
-      height: 100vh;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
       background: #000;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Arial, Helvetica, sans-serif;
     }
 
-    .box {
-      background: #14b8a6;
-      padding: 35px 25px;
-      border-radius: 20px;
-      width: 100%;
+    .card {
+      background: #1fc7b6;
+      width: 90%;
       max-width: 420px;
+      padding: 40px 25px;
+      border-radius: 20px;
       text-align: center;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.4);
     }
 
     h1 {
       color: #000;
-      font-size: 22px;
-      margin-bottom: 10px;
+      font-size: 24px;
+      margin-bottom: 15px;
     }
 
     p {
-      color: #000;
+      color: #003333;
       font-size: 15px;
-      opacity: 0.85;
+      margin-bottom: 30px;
     }
 
-    button {
-      margin-top: 25px;
+    .btn {
+      display: inline-block;
       background: #000;
       color: #fff;
-      border: none;
-      padding: 14px 26px;
-      font-size: 15px;
+      padding: 14px 24px;
       border-radius: 30px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      opacity: 0.9;
+      text-decoration: none;
+      font-size: 15px;
     }
 
     footer {
-      margin-top: 18px;
+      margin-top: 25px;
       font-size: 12px;
-      color: #000;
-      opacity: 0.7;
+      color: #003333;
     }
   </style>
 </head>
 
 <body>
 
-  <div class="box">
+  <div class="card">
     <h1>Official & Secure Customer Support</h1>
+
     <p>
-      Chat with a verified support agent.<br>
+      Chat with a verified support agent.  
       Your conversation is private and protected.
     </p>
 
-    <button onclick="openChat()">
-      Start Secure Support Chat →
-    </button>
+    <a href="#" class="btn">Start Secure Support Chat →</a>
 
-    <footer>
-      © 2026 Secure Support Services
-    </footer>
+    <footer>© 2026 Secure Support Services</footer>
   </div>
-
-  <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/698a030b2fb5be1c3a2b27ed/1jh1hnpmi';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->!-- 🔴 LIVE CHAT SCRIPT WILL GO BELOW THIS LINE -->
-
-  <script>
-    function openChat() {
-      if (typeof Tawk_API !== "undefined") {
-        Tawk_API.maximize();
-      }
-    }
-  </script>
 
 </body>
 </html>
