--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@ s0.parentNode.insertBefore(s1,s0);
       Your conversation is private and protected.
     </p>
 
-    <a href="#" class="btn">Start Secure Support Chat →</a>
+  <a href="javascript:void(Tawk_API.toggle())" class="btn">
+  Start Secure Support Chat →
+  </a>
 
     <footer>© 2026 Secure Support Services</footer>
   </div>
